Added Myself to AUTHORS... I dont deserve it yet though...

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,7 +3,7 @@ Authors:
 Chuck					- Initial design and coding of the project.
 Touriste 				- Made the file backup system
 						- Added new open directory feature which allowed opening right to the maps directory.
-
+Morlok8k				- Taking an interest in a dead project and trying to add features like Data Values for the trees
 
 
 
